--- a/Perl/Components/QueryDataPanel.xaml
+++ b/Perl/Components/QueryDataPanel.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Canvas Background="{DynamicResource BattleShipBrush}">
-        <ListView ItemsSource="{Binding QueryRecordListingViewModels}">
+        <ListView ItemsSource="{Binding QueryRecordsViewModels}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="300" Header="Course Name" DisplayMemberBinding="{Binding CourseName}"/>
